Regression: Crash when trying to read particle hair_key.co. #103307

Closed
opened 2022-12-18 00:37:33 +01:00 by Jose Conseco · 7 comments

System Information
Operating system: Linux-6.0.11-1-MANJARO-x86_64-with-glibc2.36 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 525.60.11

Blender Version
Broken: version: 3.4.0, branch: blender-v3.4-release, commit date: 2022-12-06 18:46, hash: a95bf1ac01
Worked: Blender 3.3

Short description of error
Simple script for reading particle system hair strands positions will crash blender from ver. 3.4 :

import bpy
C = bpy.context

depsgraph = C.evaluated_depsgraph_get()
obj_eval = C.active_object.evaluated_get(depsgraph)
partsysMod = obj_eval.particle_systems.active  

for strand in partsysMod.particles:  # for strand point
    pts = [hair_key.co.copy() for hair_key in strand.hair_keys]  # crash when reading  hair.co.copy()    (or we try to access hair_key.co somehow later )

Exact steps for others to reproduce the error
Open attached blend file, run script (same as above), blender will crash with crash log and blend file (3.4) below:
hair_key_crash_34.crash.txt
hair_key_crash_34.blend

**System Information** Operating system: Linux-6.0.11-1-MANJARO-x86_64-with-glibc2.36 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 525.60.11 **Blender Version** Broken: version: 3.4.0, branch: blender-v3.4-release, commit date: 2022-12-06 18:46, hash: `a95bf1ac01` Worked: Blender 3.3 **Short description of error** Simple script for reading particle system hair strands positions will crash blender from ver. 3.4 : ``` import bpy C = bpy.context depsgraph = C.evaluated_depsgraph_get() obj_eval = C.active_object.evaluated_get(depsgraph) partsysMod = obj_eval.particle_systems.active for strand in partsysMod.particles: # for strand point pts = [hair_key.co.copy() for hair_key in strand.hair_keys] # crash when reading hair.co.copy() (or we try to access hair_key.co somehow later ) ``` **Exact steps for others to reproduce the error** Open attached blend file, run script (same as above), blender will crash with crash log and blend file (3.4) below: [hair_key_crash_34.crash.txt](https://archive.blender.org/developer/F14067638/hair_key_crash_34.crash.txt) [hair_key_crash_34.blend](https://archive.blender.org/developer/F14067637/hair_key_crash_34.blend)
Author

Added subscriber: @JoseConseco

Added subscriber: @JoseConseco
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

git bisect points to: 05952aa94d
@HooglyBoogly ^

git bisect points to: 05952aa94d @HooglyBoogly ^
Pratik Borhade changed title from Crash when trying to read particle hair_key.co. to Regression: Crash when trying to read particle hair_key.co. 2022-12-19 07:06:25 +01:00
Hans Goudey self-assigned this 2022-12-19 14:37:27 +01:00

This issue was referenced by 9f575ece39

This issue was referenced by 9f575ece39e8abacb31ee830abcfc7d5830b94b1
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103307
No description provided.