Fix T103307: Crash reading particle hair key.co

05952aa94d33eeb504f accessed the vertex array when the mesh was null.